<resources>
	<string name="app_name">MediaCenterClient</string>
	<string name="playback">Controls of playback</string>
	<string name="play">Play/\npause</string>
	<string name="stop">Stop</string>
	<string name="previous">Previous</string>
	<string name="volume">Volume</string>
	<string name="mute">Mute</string>
	<string name="next">Next</string>
	<string name="louder">Louder</string>
	<string name="quieter">Quieter</string>
	<string name="back">Back</string>
	<string name="ip">192.168.0.100</string>
	<string name="port">5002</string>
	<string name="portTV">Port</string>
	<string name="serverName">Server name or IP address</string>
	<string name="connectButtonString">Connect</string>
	<string name="taginfos"/>
	<string name="offset">Offset</string>
	<string name="length">Length</string>
	<string name="shutdownServerButtonTxt">Shutdown Server</string>
	<string name="restartServerButtonTxt">Restart Server</string>
	<string name="setAdminKeyButtonTxt">Set Admin Key</string>
	<string name="setAdminKeyTV">Set the admin key</string>
	<string name="playbackInfoTV">Here should be some Info about what you are listening/watching</string>
	<string name="playlistContextMenuTxt">Get Tag Info</string>
	<string name="lengthButtonTxt">+</string>
	<string name="lengthButtonMinusTxt">-</string>
	<string name="offsetButtonTxt">+</string>
	<string name="offsetMinusButtonTxt">-</string>
	<string name="offsetTV2"/>
	<string name="lengthTV2"/>
	<string name="description">MediaCenter Control Panel</string>
	<string name="appname">MediaServer Control App</string>
	<string name="setServerInfo">Set server info</string>
	<string name="closeApp">Close App</string>
	<string name="toPlaylist">Go to the Playlist</string>
	<string name="serverControls">Server Controls</string>
	<string name="LoginTxt">Server Connection Info</string>
	<string name="adminKeyHint">Password</string>
	<string name="ipHint">192.168.0.1</string>
	<string name="portHint">5002</string>
	<string name="controlButtonsTV">Controls</string>
	<string name="noTagInfo">Sorry file has no tags,\nso we only are able to display its ID: %1$d Title: %2$s\n</string>
	<string name="wrongPW">Maybe wrong password?</string>
	<string name="restartedServer">Restarted server successfully</string>
	<string name="shutdownServer">Shutdown server successfully</string>
	<string name="setPW">Admin key set successfully</string>
	<string name="setPWNot">Admin key was NOT set</string>
	<string name="adminKeyCheck">Please check the fields above!</string>
	<string name="unsupportedFiletype">No support for that filetype</string>
	<string name="playUnsuccessful">Playback impossible</string>
	<string name="stopUnsuccessful">Unable to stop</string>
	<string name="audioOnly">Here we only display audio files!</string>
	<string name="videoOnly">Here we only show video files</string>
	<string name="stopSuccess">Stopped successfully</string>
	<string name="pausedPlay">Playback paused</string>
	<string name="pausePlayUnsuccessful">Playback did NOT pause</string>
	<string name="curItemFirst">Current item is the first on the list - no previous!</string>
	<string name="curItemLast">Current item is the last on the list - no next!</string>
	<string name="volIncr">Volume increased</string>
	<string name="volIncrUnsuccessful">Dit NOT increase volume</string>
	<string name="volDecr">Volume decreased!</string>
	<string name="volDecrUnsuccessful">Did NOT decrease volume!</string>
	<string name="backPressUnsuccessful">Back button action was unsuccessful</string>
	<string name="serverIPEmpty">Please enter a server IP or address</string>
	<string name="portNrEmpty">Please enter a port number!</string>
	<string name="serverConnected">Successfully connected to Server!</string>
	<string name="serverUnreachable">Server unreachable!</string>
	<string name="tagTitle">Title</string>
	<string name="tagAlbum">Album</string>
	<string name="tagArtist">Artist</string>
	<string name="tagGenre">Genre</string>
	<string name="tagTrack">Track</string>
	<string name="tagYear">Year</string>
	<string name="tagLength">Length</string>
	<string name="tagBitrate">Bitrate</string>
	<string name="tagSample">Samplerate</string>
	<string name="tagChannels">Channels</string>
	<string name="tagComment">Comment</string>
	<string name="tagNoInfo">No tags</string>
	<string name="serverStatsTxt">Server status</string>
	<string name="serverStatusTVTxt">Server Status</string>
	<string name="serverStatusInfoTVTxt"/>
	<string name="serverStatusMsgBegin">Server version is: %1$s \nand the following number of file are loaded: %2$s\n</string>
	<string name="serverStatusMsgRst">ID %1$s equals file type %2$s\n</string>
	<string name="toastContentDescrIV">Info Symbol</string>
	<string name="serverStatusNoMsg">Sorry server did not return any status information</string>
	<string name="getPlaylistItemCONNREFUSED">We lost the connection to the server!</string>
	<string name="lostConnection">We lost the connection to the server!</string>
	<string name="missingPlayID">Missing the ID of the selected Item!</string>
	<string name="exeError">An execution error occurred - please restart the app</string>
	<string name="interruptError">An interrupt error occurred - please restart the app</string>
	<string name="xmlError">An XML error occurred - please restart the app</string>
	<string name="ioError">An IO error occurred - please restart the app</string>
	<string name="serverIPFaulty">Server IP is faulty, please check!</string>
	<string name="portNrFaulty">Port number faulty - please check!</string>
</resources>
