<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
			  android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LoginTxt"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/serverName"
        android:id="@+id/serverName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverIP"
		android:layout_gravity="center_horizontal"
        android:text="@string/ip"
		android:hint="@string/ipHint"
		android:background="@drawable/edittextborder"
		android:layout_weight="0.05"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/portTV"
		android:id="@+id/portTV"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/portNr"
		android:layout_gravity="center_horizontal"
		android:text="@string/port"
		android:hint="@string/portHint"
		android:background="@drawable/edittextborder"
		android:layout_weight="0.05"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"/>

	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButtonString"
        android:id="@+id/connButton"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backApp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>