<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playback"
        android:id="@+id/playbackTV"
        android:layout_row="1"
        android:layout_column="0"
		android:layout_columnSpan="2"
		android:layout_gravity="center"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/playbackInfoTV"
		android:id="@+id/playbackInfoTV"
		android:layout_row="2"
		android:layout_column="0"
		android:layout_margin="5dp"
		android:layout_columnSpan="2"/>

	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@color/borderColor"
		android:layout_columnSpan="2"
		android:layout_column="0"
		android:layout_row="3"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/controlButtonsTV"
		android:id="@+id/controlButtonsTV"
		android:layout_row="3"
		android:layout_column="0"
		android:layout_columnSpan="2"
		android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/playButton"
        android:layout_row="4"
        android:layout_column="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stopButton"
        android:layout_row="4"
        android:layout_column="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/prevButton"
        android:layout_row="5"
        android:layout_column="0"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next"
		android:id="@+id/nextButton"
		android:layout_row="5"
		android:layout_column="1"/>

	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@color/borderColor"
		android:layout_columnSpan="2"
		android:layout_column="0"
		android:layout_row="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:id="@+id/volumeTV"
        android:layout_row="6"
        android:layout_column="0"
		android:layout_columnSpan="2"
		android:layout_gravity="center"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute"
        android:id="@+id/muteButton"
        android:layout_row="7"
        android:layout_column="0"
        android:checked="false"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/louder"
        android:id="@+id/louderButton"
        android:layout_row="7"
        android:layout_column="1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quieter"
        android:id="@+id/quieterButton"
        android:layout_row="8"
        android:layout_column="1"/>

	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@color/borderColor"
		android:layout_columnSpan="2"
		android:layout_column="0"
		android:layout_row="9"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backApp"
        android:layout_row="11"
        android:layout_column="1"
		android:layout_columnSpan="2"/>

</GridLayout>