<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="125dp"
		android:id="@+id/wrapper">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/wrapper2">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper5">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/length"
				android:id="@+id/lengthTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lengthTV2"
					android:id="@+id/lengthTV2"/>
				</LinearLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButton"
				android:text="@string/lengthButtonTxt"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButtonMinus"
				android:text="@string/lengthButtonMinusTxt"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/wrapper3">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper6">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/offset"
				android:id="@+id/offsetTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/offsetTV2"
					android:id="@+id/offsetTV2"/>
			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetButton"
				android:text="@string/offsetButtonTxt"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetMinusButton"
				android:text="@string/offsetMinusButtonTxt"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/wrapper4">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/taginfos"
				android:id="@+id/infoTV"
				android:gravity="center"/>
		</LinearLayout>
	</LinearLayout>
	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/audiolist"
		android:choiceMode="singleChoice"
		android:layout_below="@+id/wrapper"/>
</RelativeLayout>