<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/wrapper"
		android:baselineAligned="false">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:id="@+id/wrapper2">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper5">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/length"
					android:id="@+id/lengthTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lengthTV2"
					android:id="@+id/lengthTV2"/>
			</LinearLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButton"
				android:text="@string/lengthButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButtonMinus"
				android:text="@string/lengthButtonMinusTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:id="@+id/wrapper3">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper6">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/offset"
					android:id="@+id/offsetTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/offsetTV2"
					android:id="@+id/offsetTV2"/>
			</LinearLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetButton"
				android:text="@string/offsetButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetMinusButton"
				android:text="@string/offsetMinusButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/wrapper4"
			android:layout_weight="0">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/taginfos"
				android:id="@+id/infoTV"
				android:gravity="center"
				android:layout_margin="5dp"/>
		</LinearLayout>
	</LinearLayout>
	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/list"
		android:choiceMode="singleChoice"
		android:layout_below="@+id/wrapper"/>
</RelativeLayout>