<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/wrapper"
		android:baselineAligned="false">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:id="@+id/wrapper2">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper5">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/length"
					android:id="@+id/lengthTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lengthTV2"
					android:id="@+id/lengthTV2"/>
			</LinearLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButton"
				android:text="@string/lengthButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/lengthButtonMinus"
				android:text="@string/lengthButtonMinusTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:id="@+id/wrapper3">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/wrapper6">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/offset"
					android:id="@+id/offsetTV"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/offsetTV2"
					android:id="@+id/offsetTV2"/>
			</LinearLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetButton"
				android:text="@string/offsetButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/offsetMinusButton"
				android:text="@string/offsetMinusButtonTxt"
				android:minHeight="20dp"
				android:minWidth="40dp"/>
		</LinearLayout>
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
			android:padding="3dp"
			android:fadeScrollbars="false">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/taginfos"
				android:id="@+id/infoTV"
				android:gravity="center"
				android:drawablePadding="5dp"/>
		</ScrollView>
	</LinearLayout>
	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:id="@+id/viewUnderWrapper"
		android:background="@color/borderColor"
		android:layout_below="@+id/wrapper"/>
	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/romlist"
		android:choiceMode="singleChoice"
		android:layout_below="@+id/viewUnderWrapper"/>
</RelativeLayout>