<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:weightSum="1">

	<TextView
		android:layout_width="135dp"
		android:layout_height="wrap_content"
		android:text="@string/setAdminKeyTV"
		android:id="@+id/setAdminKeyTV"
		android:layout_gravity="center_horizontal"/>

	<EditText
		android:layout_width="200dp"
		android:layout_height="20dp"
		android:id="@+id/setAdminKeyET"
		android:layout_gravity="center_horizontal"
		android:layout_weight="0.08"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setAdminKeyButtonTxt"
		android:id="@+id/setAdminKeyButton2"
		android:layout_gravity="center_horizontal"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/back"
		android:id="@+id/backApp"
		android:layout_gravity="center_horizontal"/>
</LinearLayout>