<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="140dp"
		android:id="@+id/wrapper">

		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/spinner"
			android:dropDownSelector="#00004e"/>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/spinner"
			android:id="@+id/wrapper2">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/length"
			android:id="@+id/lengthTV"/>
		<NumberPicker
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/length"
			/>
		</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/wrapper2"
		android:id="@+id/wrapper3">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/offset"
			android:id="@+id/offsetTV"/>

		<NumberPicker
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/offset"
			/>
		</LinearLayout>
	</LinearLayout>

	<ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@android:id/list"
    android:choiceMode="singleChoice"
	android:layout_below="@+id/wrapper"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/taginfos"
		android:id="@+id/infoTV"
		android:gravity="center"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"/>

</RelativeLayout>